    ADDED: directory synchronizer
    ADDED: file splitter
    FIXED: more freedom to give FTP proxy URL-s in "New FTP Connection" menu
    FIXED: crash at ftp://user@server@proxy:port FTP URL-s
    FIXED: no parent directory at tar://... and zip://... URL-s
    FIXED: font size problems in KCmdLine and KrMaskChoice
    FIXED: internal editor quits without notification even if the edited file was not saved
    FIXED: no i18n for Name, Ext, Size, Modified
    FIXED: obsolete QT header files
    FIXED: crash at closing the progressbar window at packing
    FIXED: no or uninformative error message at packing to a readonly directory
    FIXED: crash at middle clicking on the last tab
    FIXED: KrSearch permissions panel placing bug
    FIXED: ftp port limit changed from 999 to 65535

    UPDATED: Czech translation (thanks to Martin Sixta)
    UPDATED: Spanish translation
    UPDATED: Krename url   http://www.krename.net
    REMOVED: arc_vfs support completly replaced with KIO:Slave technolegy.
1.30
======================
    ADDED: middle mouse button: click on a folder, and create a new tab.
    ADDED: middle mouse button: click on a tab, and close it
    FIXED: krarc QByteArray buffer freeing bug
    FIXED: mountman watches 'mount' instead of the directories
    FIXED: keyboard-shortcuts issues for new-tab(alt+ctrl+n), close-tab(alt+ctrl+c)
           and duplicate-tab(alt+ctrl+shift+n)
    FIXED: mountman FreeBSD bug (/etc/mtab does not exist in FreeBSD)
    FIXED: All files / Custom files. Executable was removed.
    FIXED: when selecting something from the combobox in "mark files" dialog, combo doesn't close immediatly
    FIXED: mark files dialog added the same selection more than once
    FIXED: disabled panel-types in konfigurator
    FIXED: font size problems with the Select dialog, and New Net Connection
    FIXED: mountman detects those devices as supermount, which are mounted and missing from fstab