@@ -1,5 +1,6 @@
     ADDED: directory synchronizer
     ADDED: file splitter
+    FIXED: window size and position saving at maximized mode
     FIXED: more freedom to give FTP proxy URL-s in "New FTP Connection" menu
     FIXED: crash at ftp://user@server@proxy:port FTP URL-s
     FIXED: no parent directory at tar://... and zip://... URL-s
